tests/swift/input/test6.swift
// RUN: %not %neal %args | %check

a.b // CHECK: error: Don't access property b of a
